chat-app-css-illustration-main/styles/style.css
@import url('./colors.css');

@font-face {
    font-family: Rubik;
    src: url('https://fonts.gstatic.com/s/rubik/v21/iJWKBXyIfDnIV7nBrXw.woff2');
}

/* Mobile-First */

* {
    font-family: Rubik, sans-serif;
    box-sizing: border-box;
}

.row::after {
    content: "";
    clear: both;
    display: table;
}

[class*="col-"] {
    float: left;
    padding: 15px;
}

/* For mobile phones: */
[class*="col-"] {
    width: 100%;
}

body {
    margin: auto 5vw auto 5vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 2rem;
    background-color: var(--app-bg-color);
}

body::after {
    position: absolute;
    content: "";
    background-color: white;
    width: 50%;
    height: 80vh;
    top: 0;
    border-bottom-right-radius: 100% 80%;
    z-index: -10;
    background-image: linear-gradient(to left, hsl(293, 100%, 63%), hsl(264, 100%, 61%));
    left: -10px;
}

.body-design {
    display: flex;
    flex-direction: column;
}

.body-design > p {
    margin: 0.3rem;
}

.header-design h4,h6 {
    margin: 0.1rem;
}

figure {
    border: 10px solid white;
    border-radius: 24px;
    padding: 0.5rem;
    background-color: var(--app-bg-color);
    box-shadow: 10px 10px 10px gray;
}

.header-design {
    position: relative;
    background-image: linear-gradient(to left, hsl(293, 100%, 63%), hsl(264, 100%, 61%));
    border-radius: inherit;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 0.5rem;
    padding-top: 2rem;
    margin-bottom: 0.5rem;
}

.header-design::before {
    position: absolute;
    content: "";
    background-color: white;
    width: 50%;
    height: 1.5rem;
    top: 0;
    margin: 0 25%;
    border-bottom-left-radius: 48px 48px;
    border-bottom-right-radius: 48px 48px;
  /*   content: '';
    position: absolute;
    display: block;
    width: 0;
    z-index: 1;
    border-style: solid;
    border-width: 0 20px 20px 0;
    border-color: transparent white transparent transparent;
    bottom: -30%;
    left: 90%;
    margin-left: -10px; */
}

.header-design .account-details {
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: start ;
}

figure p {
    border-radius: 8px;
    padding: 0.5rem 0.5rem;
    width: fit-content;
    max-width: 60%;
}

.him {
    color: var(--left-chat-color);
    background-color: var(--sub-heading-color);
    align-self: start;
}

.me {
    color: var(--right-chat-color);
    background-color: var(--white);
    align-self: end;
}

figure .image-group {
    display: flex;
    flex-direction: row;
    justify-content: right;
    align-items: center;
    gap: 10px;
}


.image-group img {
    border-radius: 16px;
    width: 20%; 
}

.header-design img {
    border: 1px solid white;
    border-radius: 50%;
    max-width: 2rem;
}

figure button {
    color: var(--white);
    background-image: linear-gradient(to left, hsl(264, 100%, 61%), hsl(293, 100%, 63%));;
    padding: 1rem;
    border-radius: 16px 16px 16px 8px;
    border: none;
    margin: 0.5rem;
    max-width: 70%;
}

figure input {
    border: none;
    border-radius: 32px;
    padding: 0.75rem;
}

main {
    text-align: center;
}

main h1 {
    color: var(--main-heading-color);
}

main p {
    color: var(--paragraph-color);
}

